--- a/app/src/main/res/layout/activity_register_screen.xml
+++ b/app/src/main/res/layout/activity_register_screen.xml
@@ -97,14 +97,14 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:alpha="0.7"
-                android:text=" Password" />
+                android:text="Username" />
 
             <EditText
                 android:id="@+id/usernameEditText"
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
 
-                android:inputType="textPassword" />
+                android:inputType="text" />
 
             <View
                 android:layout_width="wrap_content"
